--- a/loris/Makefile
+++ b/loris/Makefile
@@ -6,8 +6,8 @@ STACK_ROOT 	= loris
 SBT_APPS 	 =
 SBT_SSM_APPS =
 
-ACCOUNT_ID =
-PROJECT_ID =
+ACCOUNT_ID = 760097843905
+PROJECT_ID = loris
 
 SBT_DOCKER_LIBRARIES    =
 SBT_NO_DOCKER_LIBRARIES =
