--- a/storage/archivist/src/main/resources/application.conf
+++ b/storage/archivist/src/main/resources/application.conf
@@ -2,5 +2,6 @@ aws.sqs.queue.url=${?queue_url}
 aws.next.sns.topic.arn=${?next_service_topic_arn}
 aws.sqs.queue.parallelism=${?queue_parallelism}
 aws.progress.sns.topic.arn=${?progress_topic_arn}
+aws.s3.max-connections=${?s3_max_connections}
 upload.namespace=${?archive_bucket}
 metrics.namespace=archivist
