--- a/.travis.yml
+++ b/.travis.yml
@@ -11,51 +11,19 @@ branches:
   only:
     - master
 
-cache:
-  directories:
-    - $HOME/.sbt
-    - $HOME/.ivy2/cache
-    - project/target
-    - target
-
-# Based on instructions from
-# https://www.scala-sbt.org/1.0/docs/Travis-CI-with-sbt.html#Caching
-before_cache:
-  - sudo find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
-  - sudo find $HOME/.sbt        -name "*.lock"               -print -delete
-
 script:
-  - ./run_travis_task.py
-
-env:
-  global:
-    # This forces Python to print everything to stdout/stderr immediately.
-    # Otherwise, we've seen issues where all the output from our Travis scripts
-    # gets buffered, and only gets printed at the end of the test...
-    #
-    # ... out of order from the rest of the rest of the output!
-    #
-    # See also: https://docs.python.org/3/using/cmdline.html#cmdoption-u
-    #
-    - PYTHONUNBUFFERED=x
+  # Wait 45 minutes for the entire build to finish.
+  - travis_wait 45 ./run_travis.sh
 
 jobs:
   include:
-    - stage: quicktest
+    - stage: preflight
       env: TASK=travis-format
 
     # Lambda tests.
     #
-    # We test all the Lambdas in a single job to reduce the number of small
-    # build VMs we start.  Because most of our applications are Scala, the
-    # majority of builds for a Lambda wake up, discover they have nothing to
-    # do, and exit immediately.
-    #
-    # This includes all the tests for monitoring and shared_infra stacks.
-    #
-    # When this job runs, all the Lambdas get tested at once, but even this
-    # isn't significantly longer than a Scala test.
-
+    # We test all the Lambdas in a single job.
+    # This reduces the number of VMs we start.
     - stage: test
       env:
         - TRAVIS_LAMBDAS="
