--- a/assets/Makefile
+++ b/assets/Makefile
@@ -1,14 +1,10 @@
 ROOT = $(shell git rev-parse --show-toplevel)
-include $(ROOT)/functions.Makefile
+include $(ROOT)/makefiles/functions.Makefile
 
 STACK_ROOT 	=
 
 SBT_APPS 	 =
 SBT_SSM_APPS =
-
-
-ACCOUNT_ID =
-PROJECT_ID =
 
 SBT_DOCKER_LIBRARIES    =
 SBT_NO_DOCKER_LIBRARIES =
@@ -16,10 +12,5 @@ SBT_NO_DOCKER_LIBRARIES =
 PYTHON_APPS     =
 PYTHON_SSM_APPS =
 LAMBDAS 	    =
-
-TF_NAME 	= assets
-TF_PATH 	= assets/terraform
-
-TF_IS_PUBLIC_FACING = true
 
 $(val $(call stack_setup))
