--- a/builds/Makefile
+++ b/builds/Makefile
@@ -1,13 +1,10 @@
 ROOT = $(shell git rev-parse --show-toplevel)
-include $(ROOT)/functions.Makefile
+include $(ROOT)/makefiles/functions.Makefile
 
 STACK_ROOT 	= builds
 
 SBT_APPS 	 =
 SBT_SSM_APPS =
-
-ACCOUNT_ID =
-PROJECT_ID =
 
 SBT_DOCKER_LIBRARIES    =
 SBT_NO_DOCKER_LIBRARIES =
@@ -15,10 +12,5 @@ SBT_NO_DOCKER_LIBRARIES =
 PYTHON_APPS     =
 PYTHON_SSM_APPS =
 LAMBDAS 	    = notify_pushes
-
-TF_NAME = builds
-TF_PATH = $(STACK_ROOT)/terraform
-
-TF_IS_PUBLIC_FACING = false
 
 $(val $(call stack_setup))
