--- a/loris/Makefile
+++ b/loris/Makefile
@@ -1,13 +1,10 @@
 ROOT = $(shell git rev-parse --show-toplevel)
-include $(ROOT)/functions.Makefile
+include $(ROOT)/makefiles/functions.Makefile
 
 STACK_ROOT 	= loris
 
 SBT_APPS 	 =
 SBT_SSM_APPS =
-
-ACCOUNT_ID = 760097843905
-PROJECT_ID = loris
 
 SBT_DOCKER_LIBRARIES    =
 SBT_NO_DOCKER_LIBRARIES =
@@ -15,11 +12,6 @@ SBT_NO_DOCKER_LIBRARIES =
 PYTHON_APPS     =
 PYTHON_SSM_APPS = loris
 LAMBDAS 	    =
-
-TF_NAME = loris
-TF_PATH = $(STACK_ROOT)/terraform
-
-TF_IS_PUBLIC_FACING = true
 
 $(val $(call stack_setup))
 
