--- a/infrastructure/Makefile
+++ b/infrastructure/Makefile
@@ -14,3 +14,6 @@ PYTHON_SSM_APPS =
 LAMBDAS 	    = ecs_ec2_instance_tagger
 
 $(val $(call stack_setup))
+
+infrastructure-test: ecs_ec2_instance_tagger-test
+infrastructure-publish: ecs_ec2_instance_tagger-publish
