--- a/loris/loris/loris2.conf
+++ b/loris/loris/loris2.conf
@@ -42,6 +42,12 @@ log_to = 'console'    # 'console'|'file'
 log_level = 'INFO'  # 'DEBUG'|'INFO'|'WARNING'|'ERROR'|'CRITICAL'
 format = '%(asctime)s (%(name)s) [%(levelname)s]: %(message)s'
 
+# Our Loris logs are sent to CloudWatch, but Loris expects to write logs
+# to a file.  The setup scripts error if this config isn't provided.
+# Remove when https://github.com/loris-imageserver/loris/issues/477
+# is closed.
+log_dir = '/var/log/loris2' # rw-
+
 [resolver]
 impl = 'wellcome_loris.WellcomeTemplateHTTPResolver'
 cache_root = '/mnt/loris/resolver_cache'
@@ -76,3 +82,9 @@ target_formats = ['jpg','png','gif','webp']
 
     [[tif]]
     impl = 'TIF_Transformer'
+
+    # Needed for Loris setup scripts.
+    # Can be removed when https://github.com/loris-imageserver/loris/issues/477
+    # is closed.
+    [[jp2]]
+    tmp_dp = '/tmp/loris'
