Get setup_directories.py working properly

--- a/loris/loris/loris2.conf
+++ b/loris/loris/loris2.conf
@@ -87,4 +87,9 @@ target_formats = ['jpg','png','gif','webp']
     # Can be removed when https://github.com/loris-imageserver/loris/issues/477
     # is closed.
     [[jp2]]
+    impl = 'KakaduJP2Transformer'
+    kdu_expand = '/usr/local/kdu'
+    kdu_libs = '/usr/lib'
+    mkfifo = '/usr/local/mkfifo'
+    num_threads = 1
     tmp_dp = '/tmp/loris'
