--- a/.travis.yml
+++ b/.travis.yml
@@ -20,14 +20,12 @@ jobs:
       env: TASK=travis-format
 
     - stage: test
-      env: TASK=infrastructure-test
-    - env: TASK=reporting-test
+      env: TASK=reporting-test
     - env: TASK=nginx-build
     - env: TASK=loris-build
 
     - stage: publish
-      env: TASK=infrastructure-publish
-    - env: TASK=reporting-publish
+      env: TASK=reporting-publish
     - env: TASK=nginx-publish
     - env: TASK=loris-publish
 
