--- a/nginx/apigw.nginx.conf
+++ b/nginx/apigw.nginx.conf
@@ -10,10 +10,10 @@ http {
     location / {
       proxy_pass http://${APP_HOST}:${APP_PORT}/;
 
-      add_header 'Access-Control-Allow-Origin' '*';
-      add_header 'Access-Control-Allow-Credentials' 'true';
-      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-      add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+      add_header 'Access-Control-Allow-Origin' '*' 'always';
+      add_header 'Access-Control-Allow-Credentials' 'true' 'always';
+      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' 'always';
+      add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type' 'always';
 
       if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Max-Age' 1728000;
