Add host header to experience nginx

--- a/nginx/experience.nginx.conf
+++ b/nginx/experience.nginx.conf
@@ -13,6 +13,7 @@ http {
     gzip_proxied    any;
 
     location / {
+      proxy_set_header Host $host;
       proxy_pass http://${APP_HOST}:${APP_PORT}/;
     }
 
