--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
-*   §@wellcomecollection/digital-platform §@wellcomecollection/digital-experience
+*   @wellcomecollection/digital-platform @wellcomecollection/digital-experience
     
